CB-23699 - Image copy is missing in case of upgrading to an image with MP image reference
This commit contains the following:
 - new check during image change copyVHD call on Azure to emulate ARM
template with Azure's built in whatIf analysis
 - if it fails then we fallback in place the image to VHD format
 - this hopefully eliminates the need for the subsequrent fallback